--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Appleton Pizzeria</title>
+        <link rel="stylesheet" href="./styles.css">
+    </head>
+    <body>
+        <div id="wrapper">
+            <header>
+                <h1 id="title">Appleton Pizzeria</h1>
+                <hr class="shorthr">
+            </header>
+            <main>
+                <section id="contents">
+                    <div>
+                        <h2 class="center">Welcome to Appleton Pizzeria!</h2>
+                        <img src="images/truck.png" alt="Our food truck" title="Our food truck" id="homeimg">
+                        <p class="indentp">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at tellus consequat, 
+                            varius ante in, semper sapien. Suspendisse malesuada lobortis aliquet. Suspendisse massa elit, 
+                            sagittis quis sapien id, tincidunt tristique purus. Morbi felis odio, pellentesque et enim et, 
+                            aliquam pellentesque lacus. Vivamus nec ullamcorper odio. Integer vel odio tellus. Etiam nisi massa, 
+                            suscipit a est eget, condimentum accumsan sem. Mauris vel urna et erat tristique iaculis.
+                        </p>
+                    </div>
+                    <hr class="shorthr">
+                    <div id="events">
+                        <h2>Upcoming Events</h2>
+                            <span class="event">
+                                <h3>Event Name</h3>
+                                <p>Description</p>
+                            </span>
+                            <span class="event">
+                                <h3>Event Name</h3>
+                                <p>Description</p>
+                            </span>
+                            <span class="event">
+                                <h3>Event Name</h3>
+                                <p>Description</p>
+                            </span>
+                            <span class="event">
+                                <h3>Event Name</h3>
+                                <p>Description</p>
+                            </span>
+                            <span class="event">
+                                <h3>Event Name</h3>
+                                <p>Description</p>
+                            </span>
+                    </div>
+                    <hr class="shorthr">
+                    <div id="menu">
+                        <h2>Our Menu</h2>
+                            <span class="menuitem">
+                                <img src="images/cheese.png" alt="Cheese Pizza" title="Cheese Pizza" class="menuimg">
+                                <h3>Cheese Pizza</h3>
+                                <p>Asiago, Mozzarella, Parmesan</p>
+                                <p>$3.00 per Slice</p>
+                            </span><br>
+                            <span class="menuitem">
+                                <img src="images/pepperoni.png" alt="Pepperoni Pizza" title="Pepperoni Pizza" class="menuimg">
+                                <h3>Pepperoni Pizza</h3>
+                                <p>Pepperoni, Fresh Garlic</p>
+                                <p>$3.50 per Slice</p>
+                            </span><br>
+                            <span class="menuitem">
+                                <img src="images/sausage.png" alt="Sausage Pizza" title="Sausage Pizza" class="menuimg">
+                                <h3>Sausage Pizza</h3>
+                                <p>Sausage, Fresh Garlic</p>
+                                <p>$3.50 per Slice</p>
+                            </span><br>
+                            <span class="menuitem">
+                                <img src="images/marg.png" alt="Margherita Pizza" title="Margherita Pizza" class="menuimg">
+                                <h3>Margherita Pizza</h3>
+                                <p>Tomatoes, Mozzarella, Fresh Basil</p>
+                                <p>$4.00 per Slice</p>
+                            </span><br>
+                            <span class="menuitem">
+                                <img src="images/hawaii.png" alt="Hawaiian Pizza" title="Hawaiian Pizza" class="menuimg">
+                                <h3>Hawaiian Pizza</h3>
+                                <p>Pineapple, Ham, Bacon</p>
+                                <p>$4.00 per Slice</p>
+                            </span><br><br>
+                    </div>
+                </section>
+            </main>
+        </div>
+        <footer>
+            <small>&copy;2024 Appleton Pizzeria; Xana Navoichick; Tristen Smith</small>
+        </footer>
+    </body>
 </html>
