Added event routes, event page, and made the homepage dynamic

--- a/public/admin.html
+++ b/public/admin.html
@@ -25,7 +25,7 @@
                                 <input type="text" id="eventname" name="eventname" required>
                                 <br>
                                 <label for="eventloc">Location:</label>
-                                <input type="text" id="eventdesc" name="eventdesc" required>
+                                <input type="text" id="eventloc" name="eventloc" required>
                                 <br>
                                 <label for="eventdate">Date:</label>
                                 <input type="text" id="eventdate" name="eventdate" required>
@@ -60,7 +60,7 @@
                                 <br><hr class="shorthr">
                             </form><br>
                     </div>
-                    <a href="index.html" class="return">Return to Home</a><br>
+                    <a href="/" class="return">Return to Home</a><br>
                 </section>
             </main>
         </div>
