--- a/public/event.html
+++ b/public/event.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Appleton Pizzeria - Events</title>
-        <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="/styles.css">
+        <script src="/scripts/eventpage.js" defer></script>
     </head>
     <body>
         <div id="wrapper">
@@ -15,16 +16,12 @@
             <main>
                 <section id="contents">
                     <div>
-                        <h2 class="center">Event Name</h2>
-                        <p class="indentp">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at tellus consequat, 
-                            varius ante in, semper sapien. Suspendisse malesuada lobortis aliquet. Suspendisse massa elit, 
-                            sagittis quis sapien id, tincidunt tristique purus. Morbi felis odio, pellentesque et enim et, 
-                            aliquam pellentesque lacus. Vivamus nec ullamcorper odio. Integer vel odio tellus. Etiam nisi massa, 
-                            suscipit a est eget, condimentum accumsan sem. Mauris vel urna et erat tristique iaculis.
-                        </p>
+                        <h2 class="center" id="eventName"></h2>
+                        <h3 id="eventLocation"></h3>
+                        <h3 id="eventDate"></h3>
+                        <h3 id="eventTime"></h3>
                     </div>
-                    <a href="index.html" class="return">Return to Home</a><br>
+                    <a href="/" class="return">Return to Home</a><br>
                 </section>
             </main>
         </div>
