--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Appleton Pizzeria</title>
         <link rel="stylesheet" href="./styles.css">
+        <script src="./scripts/homepage.js" defer></script>
     </head>
     <body>
         <div id="wrapper">
@@ -28,61 +29,14 @@
                     <hr class="shorthr">
                     <div id="events">
                         <h2>Upcoming Events</h2>
-                            <span class="event">
-                                <h3>Event Name</h3>
-                                <p>Description</p>
-                            </span>
-                            <span class="event">
-                                <h3>Event Name</h3>
-                                <p>Description</p>
-                            </span>
-                            <span class="event">
-                                <h3>Event Name</h3>
-                                <p>Description</p>
-                            </span>
-                            <span class="event">
-                                <h3>Event Name</h3>
-                                <p>Description</p>
-                            </span>
-                            <span class="event">
-                                <h3>Event Name</h3>
-                                <p>Description</p>
-                            </span>
+                    
                     </div>
                     <hr class="shorthr">
                     <div id="menu">
                         <h2>Our Menu</h2>
-                            <span class="menuitem">
-                                <img src="images/cheese.png" alt="Cheese Pizza" title="Cheese Pizza" class="menuimg">
-                                <h3>Cheese Pizza</h3>
-                                <p>Asiago, Mozzarella, Parmesan</p>
-                                <p>$3.00 per Slice</p>
-                            </span><br>
-                            <span class="menuitem">
-                                <img src="images/pepperoni.png" alt="Pepperoni Pizza" title="Pepperoni Pizza" class="menuimg">
-                                <h3>Pepperoni Pizza</h3>
-                                <p>Pepperoni, Fresh Garlic</p>
-                                <p>$3.50 per Slice</p>
-                            </span><br>
-                            <span class="menuitem">
-                                <img src="images/sausage.png" alt="Sausage Pizza" title="Sausage Pizza" class="menuimg">
-                                <h3>Sausage Pizza</h3>
-                                <p>Sausage, Fresh Garlic</p>
-                                <p>$3.50 per Slice</p>
-                            </span><br>
-                            <span class="menuitem">
-                                <img src="images/marg.png" alt="Margherita Pizza" title="Margherita Pizza" class="menuimg">
-                                <h3>Margherita Pizza</h3>
-                                <p>Tomatoes, Mozzarella, Fresh Basil</p>
-                                <p>$4.00 per Slice</p>
-                            </span><br>
-                            <span class="menuitem">
-                                <img src="images/hawaii.png" alt="Hawaiian Pizza" title="Hawaiian Pizza" class="menuimg">
-                                <h3>Hawaiian Pizza</h3>
-                                <p>Pineapple, Ham, Bacon</p>
-                                <p>$4.00 per Slice</p>
-                            </span><br><br>
+                            
                     </div>
+                    <br>
                 </section>
             </main>
         </div>
